<resources>
    <string name="app_name">TrackU</string>
    <string name="app_description">This app helps to track U using Open Street Maps</string>
    <string name="sign_in_button_label">Sign in</string>
    <string name="title_activity_main">Maps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TrackU Maps List</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation</string>
    <string name="action_settings">Settings</string>
    <string name="accept">Accept</string>
    <string name="su">Sing up</string>
    <string name="pass_label">Password</string>
    <string name="pass2_labe">Confirm Password</string>
    <string name="email_label">E-mail Address</string>
    <string name="fname_label">First Name</string>
    <string name="lname_label">Laste Name</string>
    <string name="gm_label">Google maps</string>
    <string name="osm_label">Open Street Maps</string>
    <string name="bt_center_map_description">Center map</string>
    <string name="lat_v">LATITUDE: </string>
    <string name="lon_v">LONGITUDE: </string>
    <string name="MM_b1">Live Location</string>
    <string name="MM_b2">History</string>
    <string name="MM_msg">Welcome</string>
    <string name="back_b_inf">BACK</string>
    <string name="title_pickers">Get location by Date or Hour</string>
    <string name="format_date" translatable="false">yyyy-mm-dd</string>
    <string name="format_hour" translatable="false">hh:mm</string>
    <string name="dh_btn" translatable="false">Go to find by date or Hour</string>
    <string name="live_tv" translatable="false">Live Locations</string>
    <string name="live_msg" translatable="false">Go to Live</string>
    <string name="no_dh_msg" translatable="false">Please, choose a date and/or hour</string>
    <string name="sing_out_ms">SING OUT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>
