<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="32dp"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="10dp"
        ></View>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New user registration"
        android:textSize="24dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/fname_label"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/reg_fname_value"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/lname_label"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/reg_lname_value"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_label"
        android:inputType="textEmailAddress"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/reg_username_value"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/pass_label"
        android:inputType="textPassword"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/reg_password_value"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/pass2_labe"
        android:inputType="textPassword"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/reg_password_confirmation_value"
        />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/su"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="40dp"
        style="@android:style/Widget.Button"
        android:layout_gravity="center"
        android:onClick="empanada"
        />


</LinearLayout>