<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32dp"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/rubikblackitalic"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="10dp"
        ></View>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:textSize="24dp"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/rubikitalic"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_label"
        android:fontFamily="@font/rubikregular"
        android:inputType="textEmailAddress"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:id="@+id/login_username_value"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/pass_label"
        android:inputType="textPassword"
        android:fontFamily="@font/rubikregular"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/login_password_value"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button_label"
        android:fontFamily="@font/rubikblack"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="40dp"
        style="@android:style/Widget.Button.Toggle"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/su"
        android:textSize="18sp"
        android:fontFamily="@font/rubikitalic"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:linksClickable="true"

        android:autoLink="all"
        android:id="@+id/registration_link"
        />


</LinearLayout>