<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuAct">

  <TextView
      android:id="@+id/menu_msg"
      android:layout_width="match_parent"
      android:layout_height="200dp"
      android:text="@string/MM_msg"
      android:textColor="@color/colorAccent"
      android:textSize="50dp"
      android:textAlignment="center"
      android:layout_above="@id/yl_btn"
      android:layout_marginBottom="123dp"/>


  <Button
      android:id="@+id/yl_btn"
      android:layout_width="match_parent"
      android:layout_height="150dp"
      android:text="@string/MM_b1"
      android:layout_centerInParent="true"
      style="@android:style/Widget.Button.Toggle"
      android:textColor="@color/colorPrimaryDark"
      android:onClick="pressMyLocation"/>


  <Button
      android:id="@+id/h_btn"
      android:layout_width="match_parent"
      android:layout_height="150dp"
      android:text="@string/MM_b2"
      android:layout_below="@id/yl_btn"
      style="@android:style/Widget.Button.Toggle"
      android:textColor="@color/colorPrimaryDark"
      android:onClick="pressToHistory"/>

  <Button
      android:id="@+id/singout_btn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/sing_out_ms"
      android:layout_below="@+id/h_btn"
      style="@android:style/Widget.Button.Toggle"
      android:textColor="@color/design_default_color_primary_dark"
      android:onClick="sing_out"/>

</RelativeLayout>